# ig-normalizer

./: .gitignore  BUILD.md  README.md  build.bat  build.ps1  ig-normalizer.spec  pyproject.toml  release.sh
.github/workflows/: build.yml
installer/: ig-normalizer.iss
src/ig_normalizer/: __init__.py  __main__.py  cli.py  normalizer.py
